Expert Assistant -> Shopping Assistant

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -67,7 +67,7 @@ const featuresList = [
       >
         Add an <span
           class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
-          >AI Expert Assistant</span
+          >AI Shopping Assistant</span
         > to Every <span
           class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
           >Product Page</span
