--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -1,5 +1,5 @@
 <section>
-  <div class="px-8 py-24 mx-auto md:px-12 lg:px-24 max-w-7xl relative">
+  <!-- <div class="px-8 py-24 mx-auto md:px-12 lg:px-24 max-w-7xl relative">
     <div class="text-center max-w-4xl mx-auto">
       <div>
         <blockquote
@@ -26,5 +26,5 @@
         </div>
       </figcaption>
     </div>
-  </div>
+  </div> -->
 </section>
