--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -15,11 +15,12 @@
           using our analytics dashboard.
         </p>
         <div class="flex flex-wrap items-center gap-2 mx-auto mt-12">
-          <button
+          <a
+            href="https://app.productgenie.io"
             class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-white bg-accent-600 hover:bg-accent-700 focus:ring-accent-500/50 h-9 px-4 py-2 text-sm font-medium rounded-md"
           >
             Get started
-          </button>
+          </a>
           <button
             class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-base-500 bg-white hover:text-accent-500 ring-1 ring-base-200 focus:ring-accent-500 h-9 px-4 py-2 text-sm font-medium rounded-md"
           >
