--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,5 +1,5 @@
 <section id="features">
-  <div class="px-8 py-20 mx-auto md:px-12 lg:px-24 max-w-7xl ">
+  <div class="px-8 py-20 mx-auto md:px-12 lg:px-24 max-w-7xl">
     <div class="text-center max-w-2xl mx-auto lg:text-balance">
       <p class="text-sm leading-normal font-bold uppercase text-accent-600">
         AI SHOPPING ASSISTANT
@@ -10,7 +10,8 @@
         Help Customers Make Confident Purchase Decisions
       </h2>
       <p class="text-base leading-normal mt-4 text-base-500 font-medium">
-        Deploy AI chatbots that instantly answer customer questions and drive more sales on your product pages.
+        Deploy AI chatbots that instantly answer customer questions and drive
+        more sales on your product pages.
       </p>
     </div>
 
@@ -32,14 +33,14 @@
           class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
         >
           Instant Product Q&A
-        </span><span
+          <!-- </span><span
           class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
         >
-          24/7 Customer Support
-        </span><span
+          24/7 Customer Support -->
+          <!-- </span><span
           class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
         >
-          Increase Sales Conversion
+          Customer Insights -->
         </span><span
           class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
         >
