--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     >
     </div>
     <div class="px-8 mx-auto md:px-12 lg:px-24 max-w-7xl">
-      <h1 class="text-4xl font-semibold tracking-tight text-center text-black">
+      <h1
+        class="text-4xl font-semibold tracking-tight text-center text-black underline"
+      >
         About Us
       </h1>
       <p class="mt-4 text-lg text-center text-gray-600">
