added contact form with Google reCAPTCHA
added contact form with Google reCAPTCHA that sends a POST request to GCP Cloud Function with token, the function verifies token and sends email from our no-reply address to our contact address.

added buttons to navbar

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -41,7 +41,7 @@
       </div>
       <nav
         :class="{'flex': open, 'hidden': !open}"
-        class="flex-col items-center flex-grow gap-4 hidden md:pb-0 md:flex md:justify-end md:flex-row"
+        class="flex-col items-center flex-grow gap-4 hidden md:pb-0 md:flex md:justify-end md:flex-row lg:gap-6"
       >
         <a
           class="text-sm font-medium text-black hover:text-accent-600 lg:ml-auto"
@@ -54,6 +54,14 @@
         <a
           class="text-sm font-medium text-black hover:text-accent-600"
           href="/faq">Faq</a
+        >
+        <a
+          class="text-sm font-medium text-black hover:text-accent-600"
+          href="/about">About Us</a
+        >
+        <a
+          class="text-sm font-medium text-black hover:text-accent-600"
+          href="/contact">Contact</a
         >
 
         <div class="inline-flex items-center gap-2 list-none lg:ml-6">
