--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -200,7 +200,7 @@
                 rel="noopener noreferrer"
                 class="text-accent-600 hover:underline"
                 ><em>ProductGenie</em> web app</a
-              > to gain valuable insights.
+              > to get started.
             </div>
           </div>
         </div>
@@ -234,10 +234,10 @@
             style="display: none;"
           >
             <div class="p-4 pt-2 text-zinc-500">
-              Currently, the AI learns automatically from your product data.
-              Advanced customization options, allowing you to fine-tune
-              responses and knowledge, are planned for a future release. Stay
-              tuned for updates!
+              Currently, the AI learns automatically from your product data and
+              customer reviews. Advanced customization options, allowing you to
+              fine-tune responses and knowledge, are planned for a future
+              release. Stay tuned for updates!
             </div>
           </div>
         </div>
