--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -10,7 +10,7 @@
           Privacy policy
         </h1>
         <p class="mt-4 text-base lea ding-7 text-base-500">
-          Last updated on January 01, 2023
+          Last updated on April 18, 2025
         </p>
       </div>
     </div>
@@ -19,7 +19,7 @@
         class="mx-auto max-w-[40rem] prose-base prose text-base-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black"
       >
         <p>
-          This privacy policy sets out how Unwrapped AB collects, processes and
+          This privacy policy sets out how Analysta LLC collects, processes and
           uses your Personal Information through your use of our Services.
         </p>
         <h3>Definitions</h3>
@@ -35,8 +35,8 @@
           data.
         </p>
         <p>
-          Services means all services provided by Michael Alexander Web Agency
-          to you, including (but not limited to) this Website.
+          Services means all services provided by Analysta LLC to you, including
+          (but not limited to) this Website and ProductGenie.
         </p>
         <p>
           Website means this website and all websites, applications and
@@ -47,6 +47,15 @@
           We only collect and use Personal Information to the extent necessary
           to provide you with the Services. We collect Personal Information for
           the Website to provide you with a better online experience.
+        </p>
+        <h3>ProductGenie Data Collection</h3>
+        <p>
+          ProductGenie collects publicly available information from your
+          e-commerce website, such as product descriptions, product metadata,
+          and reviews to train AI models that power the shopping assistant. This
+          information is used solely to enhance the performance of the
+          ProductGenie service on your website and to provide analytics about
+          customer questions and behavior.
         </p>
         <h3>Personal Information Retention</h3>
         <p>
@@ -74,8 +83,6 @@
           <li>
             Access: You may request from us access to your data that we hold on
             you.
-
-            <p></p> li
           </li>
           <li>
             Rectification: If the data we hold on you is inaccurate, you may
@@ -84,11 +91,12 @@
           </li>
           <li>
             Erasure: Subject to certain conditions, you may request that we
-            erase all of the data we hold on you. li Restrictions: Subject to
-            certain conditions, you may request that we restrict the processing
-            of data we hold on you.
+            erase all of the data we hold on you.
           </li>
-
+          <li>
+            Restrictions: Subject to certain conditions, you may request that we
+            restrict the processing of data we hold on you.
+          </li>
           <li>
             Portability: Subject to certain conditions, you may request that we
             transfer all the data we hold on you to a third party (including
@@ -109,7 +117,7 @@
           privacy settings on each social media site and platform. The data we
           are provided by you through your interaction with our Services on
           social media sites and platforms will be used by us subject to the
-          terms of this privacy policy. Depending on your social media site’s
+          terms of this privacy policy. Depending on your social media site's
           privacy settings, your Personal Information may become public to a
           community of users if you choose to engage with our Services through
           these platforms. For further information on how you can customize your
@@ -120,7 +128,7 @@
         <h3>Minors</h3>
         <p>
           We do not knowingly collect information on children under the age of
-          16 (“Child”). If you become aware that a Child has provided us with
+          16 ("Child"). If you become aware that a Child has provided us with
           Personal Information, please contact us. If we become aware that we
           have collected Personal Information from a Child without their
           parent's verifiable authorization to access our Services, we will take
@@ -129,19 +137,19 @@
         <h3>Third Party Links</h3>
         <p>
           Our website contains links to other third-party websites not owned or
-          managed by Unwrapped. This privacy policy applies to this website
+          managed by Analysta LLC. This privacy policy applies to this website
           only. If you click a link to a third-party website, the privacy policy
           of that website will apply. We highly recommend that you read the
           privacy policies of other websites as they may be different from ours.
         </p>
         <h3>Payment Vendors</h3>
-        <p>
-          You can make payments via our website. Our vendors are listed below:
-        </p>
-        <ul><li>Paypal</li></ul>
+        <p>You can make payments via our website. Our payment provider is:</p>
+        <ul><li>Stripe</li></ul>
         <p>
           Their privacy policy can be viewed <a
-            href="https://www.paypal.com/webapps/mpp/ua/privacy-full">here</a
+            href="https://stripe.com/privacy"
+            target="_blank"
+            rel="noopener noreferrer">here</a
           >
         </p>
         <h3>Merger, acquisition or asset sale</h3>
@@ -153,20 +161,21 @@
         <p>
           We are constantly reviewing our privacy policy and procedures to
           ensure that they meet best practices. This policy was last updated on
-          August 21, 2021.
+          April 18, 2025.
         </p>
         <h3>Contact us</h3>
         <p>
           If you have any questions or suggestions about our privacy policy or
           want to know more information about Personal Information we hold,
-          please contact us at support@unwrapped.design or write to us at
-          Mariehamn, Åland Islands..
+          please contact us at <a href="mailto:support@productgenie.io"
+            >support@productgenie.io</a
+          >.
         </p>
         <h3>Complaints</h3>
         <p>
           If you believe that we have breached our obligations to you under this
           privacy policy or relevant privacy laws, please contact us at <a
-            href="">email@example</a
+            href="mailto:support@productgenie.io">support@productgenie.io</a
           >
           If you are not satisfied with our response, you have the right to lodge
           a complaint at any time to your relevant authority.
