--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,14 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Faq from "../components/infopages/Faq.astro";
-
-
+import FaqContent from "../components/infopages/Faq.astro";
 ---
 
-
-
 <BaseLayout>
-
-  <Faq />
-
+  <FaqContent />
 </BaseLayout>
