--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,11 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Privacy from "../components/infopages/Privacy.astro";
-
-
-
+import PrivacyPolicy from "../components/infopages/Privacy.astro";
 ---
 
 <BaseLayout>
-  <Privacy />
+  <PrivacyPolicy />
 </BaseLayout>
