--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Terms from "../components/infopages/Terms.astro";
+import TermsOfService from "../components/infopages/Terms.astro";
 ---
+
 <BaseLayout>
-  <Terms />
+  <TermsOfService />
 </BaseLayout>
