--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -51,13 +51,13 @@ const featuresList = [
       >
         <a
           href="#pricing"
-          class="flex items-center justify-center transition-all duration-200 text-accent-500 hover:text-accent-600 bg-accent-50/50 hover:bg-accent-50 h-[30px] px-4 text-xs font-medium rounded-full"
+          class="flex items-center justify-center transition-all duration-200 text-white hover:text-white bg-accent-500 hover:bg-accent-600 h-[30px] px-4 text-xs font-medium rounded-full"
         >
           Get Started Free
         </a>
         <a
           href="https://demostore24.uk/product/aquaveil-moisturizer/"
-          class="flex items-center justify-center transition-all duration-200 text-base-400 hover:text-base-500 bg-base-50/50 hover:bg-base-50 h-[30px] px-4 text-xs font-medium rounded-full"
+          class="flex items-center justify-center transition-all duration-200 text-base-700 hover:text-base-800 bg-base-200 hover:bg-base-300 h-[30px] px-4 text-xs font-medium rounded-full"
         >
           See Demo
         </a>
