--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -95,7 +95,7 @@ const featuresList = [
       <img
         alt="ProductGenie AI Assistant"
         class="relative w-full ring-4 ring-base-50 border border-base-200 lg:rounded-2xl object-cover rounded"
-        src="/images/ask-questions.gif"
+        src="/images/demostore.gif"
       />
     </div>
   </div>
