--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -31,7 +31,7 @@
       <div class="lg:col-span-2">
         <img
           class="object-cover h-full ring-4 ring-base-50 border border-base-200 rounded-2xl"
-          src="/images/dashboard.png"
+          src="/images/analytics.gif"
           alt="#_"
         />
       </div>
