--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -3,22 +3,22 @@ import { MessageSquare, BarChart2, Code } from "lucide-react";
 
 const featuresList = [
   {
-    title: "Product Expert",
+    title: "Chatbot",
     description:
-      "Add an AI assistant to product pages that expertly answers customer questions instantly.",
+      "Add an AI chatbot to product pages that expertly answers customer questions instantly.",
     icon: MessageSquare,
-  },
-  {
-    title: "Analytics Dashboard",
-    description:
-      "Gain product insights from customer questions and make data-driven decisions.",
-    icon: BarChart2,
   },
   {
     title: "Website Integration",
     description:
       "Easy setup that automatically learns from your product descriptions and reviews.",
     icon: Code,
+  },
+  {
+    title: "Analytics Dashboard",
+    description:
+      "Gain product insights from customer questions and make data-driven decisions.",
+    icon: BarChart2,
   },
 ];
 ---
