--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -147,7 +147,8 @@
         </div>
         <dd>
           <p class="text-base leading-normal mt-2 text-base-500 font-medium">
-            Our AI automatically learns your entire product catalog.
+            Our AI automatically learns your entire product catalog and customer
+            reviews.
           </p>
         </dd>
       </div>
